# sandbox

./: .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.0  Makefile.am  NEWS  README  README.md  TODO  aclocal.m4  autogen.sh  canonicalize.c  clean.sh  config.h  config.h.in  config.status  configure.ac  configure.in  create-localdecls  getcwd.c  headers.h  libsandbox.c  libtool  localdecls.h  sandbox.bashrc  sandbox.c  sandbox.h  sandbox_futils.c  symbols.in
.github/workflows/: build-test-ci.yml
data/: Makefile.am  sandbox.bashrc  sandbox.desktop
etc/: 00default  Makefile.am  sandbox.conf
etc/sandbox.d/: 00default.in  Makefile.am
librcutil/: Makefile.am
libsandbox/: Makefile  Makefile.am  canonicalize.c  eqawarn.c  headers.h  libsandbox.c  libsandbox.h  local.mk  lock.c  memory.c  pre_check_at.c  pre_check_mkdirat.c  pre_check_openat.c  pre_check_openat64.c  pre_check_unlinkat.c  realpath.c  sb_nr.h.in  symbols.h.in  trace.c  wrappers.c  wrappers.h
libsandbox/trace/: common.c  os.c
libsandbox/trace/linux/: aarch64.c  alpha.c  arch.c  arm.c  bfin.c  common.c  hppa.c  i386.c  ia64.c  powerpc.c  s390.c  sparc.c  syscall_info.c  x86_64.c
libsandbox/wrapper-decls/: __xmknod.c  access.c  chmod.c  creat.c  creat64.c  fopen64.c  getcwd.c  link.c  mkdir.c  mkfifo.c  mknod.c  open.c  opendir.c  rename.c  rmdir.c  symlink.c  truncate64.c  unlink.c
libsandbox/wrapper-funcs/: __64_post.h  __64_pre.h  __futimesat64.c  __futimesat_time64.c  __lutimes64.c  __lutimes_time64.c  __open64_2.c  __open_2.c  __openat64_2.c  __openat_2.c  __pre_at_check.c  __pre_check.c  __utime64.c  __utimensat64.c  __utimensat_time64.c  __utimes64.c  __utimes_time64.c  __wrapper_exec.c  __wrapper_simple.c  __xmknod.c  __xmknodat.c  _xmknod.c  access.c  chmod.c  chown.c  creat.c  creat64.c  execv.c  execve.c  execveat.c  execvp.c  execvpe.c  faccessat.c  fchmod.c  fchmodat.c  fchown.c  fchownat.c  fexecve.c  fopen.c  fopen64.c  (+54 more)
libsbutil/: Makefile  Makefile.am  environment.c  get_sandbox_conf.c  get_sandbox_confd.c  get_sandbox_debug_log.c  get_sandbox_lib.c  get_sandbox_log.c  get_sandbox_rc.c  get_tmp_dir.c  is_env_off.c  is_env_on.c  local.mk  sb_backtrace.c  sb_close.c  sb_efuncs.c  sb_exists.c  sb_gdb.c  sb_getcwd.c  sb_memory.c  sb_method.c  sb_open.c  sb_printf.c  sb_proc.c  sb_read.c  sb_stat.c  sb_write.c  sb_write_fd.c  sbio.c  sbutil.c  sbutil.h
libsbutil/gnulib/: gl-inline.h  glue.h  hash-triple.c  xalloc.h  xgetcwd.h
libsbutil/gnulib/malloc/: scratch_buffer.gl.h
libsbutil/include/: Makefile.am
libsbutil/include/rcscripts/: Makefile.am  rccore.h  rcdefines.h.in  rctypes.h  rcutil.h
libsbutil/include/rcscripts/core/: Makefile.am  services.h
libsbutil/include/rcscripts/util/: Makefile.am  config.h  debug.h  dynbuf.h  file.h  list.h  simple-regex.h  str_list.h  string.h
libsbutil/src/: Makefile.am  config.c  debug.c  dynbuf.c  file.c  librcutil.map  simple-regex.c  string.c
refs/heads/: flameeyes  master  ptrace-3.x  stable-2.x
refs/tags/: v2.14  v2.20  v2.25  v2.27  v2.28  v2.29  v2.30  v2.31  v2.32  v2.33  v2.34  v2.35  v2.36  v2.37  v2.38  v2.39  v2.40  v2.41  v2.42  v2.43  v2.44  v2.45  v2.46  v3.0
scripts/: Makefile.am  clean.sh  dist.sh  gen_symbol_header.awk  gen_symbol_version_map.awk  gen_trace_header.awk  svn2cl  svn2cl.sh  svn2cl.xsl
src/: Makefile  Makefile.am  canonicalize.c  environ.c  getcwd.c  libsandbox.c  libsandbox.h  local.mk  namespaces.c  options.c  sandbox.c  sandbox.h  sandbox.sh  sandbox.sh.in  sandbox_futils.c  sandbox_utils.c  symbols.h.in
tests/: Makefile  Makefile.am  access-0.c  access-1.sh  access.at  access.sh  atlocal.in  chmod-0.c  chmod-1.sh  chmod.at  chown-0.c  chown-1.sh  chown.at  creat-0.c  creat64-0.c  dlopen.c  execv-0.c  execv-1.sh  execvp-0.c  faccessat-0.c  faccessat-1.sh  faccessat_static-0.c  faccessat_static-1.sh  fchmod-0.c  fchmod-1.sh  fchmod-2.sh  fchmodat-0.c  fchmodat-1.sh  fchmodat.at  fchown-0.c  fchown-1.sh  fchown-2.sh  fchownat-0.c  fchownat-1.sh  fchownat-2.sh  fchownat.at  fopen-0.c  fopen64-0.c  fork-follow_static_tst.c  fork-follow_tst.c  (+172 more)
