AC_PREREQ(2.59)
AC_INIT(sandbox, 1.1, dev-portage@gentoo.org)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([canonicalize.c])
AC_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CC
AC_PROG_LIBTOOL

AC_PREFIX_DEFAULT([/usr])
# Checks for libraries.
# Checks for header files.
AC_FUNC_ALLOCA
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_HEADER_SYS_WAIT
AC_CHECK_HEADERS([fcntl.h limits.h memory.h stddef.h stdlib.h string.h strings.h sys/file.h sys/param.h sys/time.h unistd.h utime.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_UID_T
AC_TYPE_MODE_T
AC_TYPE_SIZE_T
AC_CHECK_TYPES([ptrdiff_t])

# Checks for library functions.
AC_FUNC_CHOWN
AC_FUNC_FORK
AC_FUNC_LSTAT
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK
AC_FUNC_MALLOC
AC_FUNC_REALLOC
AC_TYPE_SIGNAL
AC_FUNC_STAT
AC_CHECK_FUNCS([bzero ftruncate getcwd lchown memmove mempcpy memset mkdir pathconf realpath rmdir setenv strcasecmp strchr strdup strerror strndup strrchr strspn strstr])

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
